<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <DatePicker
        android:id="@+id/bookingDatePicker"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MakeABooking"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/checkDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/CheckDate"
        app:layout_constraintBottom_toBottomOf="@+id/bookingDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
...
