...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkmark"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/booking_confirmation_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/BookingConfirmation2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
