<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="80dp"
        android:background="#DDC8C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <Spinner
        android:id="@+id/spinnerUserSkillLevel"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginTop="160dp"
        android:gravity="right"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <Spinner
        android:id="@+id/spinnerUserDistancePreference"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginTop="208dp"
        android:gravity="right"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <TextView
        android:id="@+id/textViewSkillLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="Skill Level"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <TextView
        android:id="@+id/textViewDistancePreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:gravity="right"
        android:text="Distance Preference"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:hint="Firstname Lastname"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Email: "
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <EditText
        android:id="@+id/textViewUserEmail"
        android:layout_width="162dp"
        android:layout_height="20dp"
        android:layout_marginTop="112dp"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:hint="Your Email"
        android:singleLine="true"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <TextView
        android:id="@+id/textViewAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="Your Availability"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture" />

    <ImageButton
        android:id="@+id/imageButtonEdit"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:contentDescription="TODO"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/edit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="55dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginTop="500dp"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

                <TableLayout
                    android:id="@+id/TableLayoutAvailability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow android:layout_width="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="Weekday"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="50dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="Available Times"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <EditText
                            android:id="@+id/availableWeekday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="30dp"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:hint="Monday"
                            android:singleLine="true"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/availableFrom"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="9"
                            android:singleLine="true"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="to"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/availableTo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:hint="16"
                            android:singleLine="true"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddRow"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginTop="452dp"
        android:alpha="0"
        android:text="Add New Section"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="Save"
        android:textSize="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>